test/assets/invalid/case/value-expect-int.hs
a :: Int
a = case 1 of
    1 -> 1
    2 -> [2]
    3 -> 3